Bold headings to subsections

--- a/CSEvaluation.tex
+++ b/CSEvaluation.tex
@@ -1,6 +1,7 @@
 \section{Evaluation}
 
-    \textbf{Bugs Identified}
+    \subsection{Bugs Identified}
+
     %% Intro paragraph
     First, CrashSimulator was evaluated against NUMBER of popular tools with public bug trackers available. The goal was
     to identify bugs from each tool's bug tracker (both fixed and unfixed) that are related to the faults that
@@ -10,6 +11,7 @@
 
     \emph{\textbf{INSERT TABLE HERE}}
 
-    \textbf{Limitations}
+    \subsection{Limitations}
+
         Multi-threaded stuff is an issue for both NetCheck and CheckAPI
 
