Added imports for table related packages

--- a/CrashSimulator.tex
+++ b/CrashSimulator.tex
@@ -63,6 +63,8 @@
 % draft mode.
 %
 \documentclass[conference]{IEEEtran}
+\usepackage{booktabs}
+\usepackage{multirow}
 %
 % If IEEEtran.cls has not been installed into the LaTeX system files,
 % manually specify the path to it like:
