Paragraph about why we did performance testing

--- a/CSEvaluation.tex
+++ b/CSEvaluation.tex
@@ -10,9 +10,18 @@
 
     \subsection{Execution Performance}
 
-        \subsubsection{Evaluation Against Sample Programs} The Python implementation of CrashSimulator was performance
-        tested against two sample programs that were seeded with specific counts of potential anomalies. The two sample
-        programs were seeded as follows:
+        One key attribute of successful testing tools is that they be able to complete their tests in a timely manner.
+        If a tool takes too long to complete its tests users will be less likely to run it frequently, or at all,
+        reducing the tools overall usefulness dramatically. To this end, the performance of CrashSimulator was evaluated
+        in order to determine whether or not it was able to complete its test executions in an acceptable time frame.
+        \textbf{There probably needs to be a citation here related to how long a developer is typically willing to wait
+        for a test execution to complete}
+
+        \subsubsection{Evaluation Against Sample Programs}
+
+            The Python implementation of CrashSimulator was performance
+            tested against two sample programs that were seeded with specific counts of potential anomalies. The two sample
+            programs were seeded as follows:
 
             \begin{tabular}{l  l  l  l}
                 \toprule{}
